Add header and footer

--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
       </article>
     </main>
     <footer>
-      <div>
+      <div class="menu">
         <ul>
           <li>Rubriques</li>
           <li><a href="">Actualités en direct</a></li>
@@ -258,7 +258,7 @@
         <ul>
           <li>M le Mag</li>
           <li><a href="">L'epoque</a></li>
-          <li><a href="">Le styl</a>e</li>
+          <li><a href="">Le style</a></li>
           <li><a href="">Gastronomie</a></li>
           <li><a href="">Voyage</a></li>
           <li><a href="">Mode</a></li>
@@ -272,7 +272,7 @@
           <li><a href="">Arts</a></li>
         </ul>
       </div>
-      <ul>
+      <ul class="network">
         <li>Suivez le monde</li>
         <li><a href=""><i class="fab fa-facebook"></i>Facebook</a></li>
         <li><a href=""><i class="fab fa-youtube"></i>Youtube</a></li>
