--- a/src/article.html
+++ b/src/article.html
@@ -29,7 +29,7 @@
     <meta name="Geography" content="France" />
     <meta name="Category" content="family" />
 
-    <link href="./scss/stryles.scss" rel="stylesheet" />
+    <link href="./scss/styles.scss" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/24a053b724.js" crossorigin="anonymous"></script>
   </head>
   <body>
