--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Noël, c’est pour bientôt !</title>
+    <title>Le monde, accueil</title>
     <meta name="Content-Type" content="UTF-8" />
     <meta name="Content-Language" content="fr" />
     <meta
@@ -29,7 +29,7 @@
     <meta name="Geography" content="France" />
     <meta name="Category" content="family" />
 
-    <link href="./scss/stryles.scss" rel="stylesheet" />
+    <link href="./scss/styles.scss" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/24a053b724.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -54,7 +54,18 @@
       </nav>
     </header>
     <main>
-      <a href="./article.html">article</a>
+      <div class="home">
+        <a href="./article.html">article</a>
+
+        <ul>
+          <li>
+            <article>
+              <img src="" alt="">
+              <h3>Biathlon : les Français en mission commando au Grand-Bornand</h3>
+            </article>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer>
       <div class="menu">
