--- a/src/article.html
+++ b/src/article.html
@@ -22,7 +22,7 @@
       content="Groupe 9: Tristan Lemire, Nastasia Dotlic, Thomas Evano, Emilie Tombuyses, Virgil Limongi"
     />
     <meta name="Publisher" content="Group 9" />
-    <meta name="Identifier-Url" content="https://lemonde/article/NoëlCadeaux" />
+    <meta name="Identifier-Url" content="https://www.lemonde.fr/idees/article/2019/12/19/NoëlCadeaux" />
     <meta name="Revisit-After" content="15 days" />
     <meta name="Robots" content="follow" />
     <meta name="Rating" content="general" />
