--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,30 @@
     <meta name="Content-Language" content="fr" />
     <meta
       name="Description"
-      content="La période de Noël arrive, beaucoup d’entre nous ne savent pas quoi acheter pour offrir à leurs proches ou à leurs amis. C’est pourquoi nous vous proposerons donc dans cet article différentes idées de cadeaux qui feront certainement plaisir à vos proches !"
+      content="Le Monde.fr - 1er site d'information. Les articles du journal et toute l'actualité en continu : International, France, Société, Economie, Culture, Environnement, ..."
     />
     <meta
       name="Keywords"
-      content="Pere noel sapin repas cadeaufamille retrouvailles fêtes lutin jouet calendrier de l’avent décoration Laponie crèche célébrer bûche de Noël Enfant guirlande tradition réunion en famille cheminée"
+      content="Pere noel sapin repas cadeau fêtes lutin jouet calendrier de l’avent célébrer bûche de Noël Enfant guirlande tradition réunion en famille cheminée star war skywalker hollywood equipe de france de biathlon les misérables ladj ly inde manifestations reseaux mobiles new delhi"
     />
-    <meta name="Subject" content="Noël" />
+    <meta name="Subject" content="Information" />
     <meta
       name="Author"
       content="Groupe 9: Tristan Lemire, Nastasia Dotlic, Thomas Evano, Emilie Tombuyses, Virgil Limongi"
     />
     <meta name="Publisher" content="Group 9" />
-    <meta name="Identifier-Url" content="https://lemonde/article/NoëlCadeaux" />
+    <meta name="Identifier-Url" content="https://www.lemonde.fr/" />
     <meta name="Revisit-After" content="15 days" />
     <meta name="Robots" content="follow" />
     <meta name="Rating" content="general" />
     <meta name="Geography" content="France" />
-    <meta name="Category" content="family" />
+    <meta name="Category" content="Information" />
 
     <link href="./scss/styles.scss" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/24a053b724.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/24a053b724.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="shadow">
@@ -41,30 +44,77 @@
       </div>
       <nav>
         <ul>
-          <li><i class="fas fa-home"><a href="/"></a></i></li>
+          <li>
+            <i class="fas fa-home"><a href="/"></a></i>
+          </li>
           <li>Actualité</li>
           <li>Economie</li>
           <li>Vidéos</li>
           <li>Opinions</li>
           <li>Culture</li>
           <li>M Le mag</li>
-          <li>Services</li>
           <li><i class="fas fa-search"></i></li>
         </ul>
       </nav>
     </header>
     <main>
       <div class="home">
-        <a href="./article.html">article</a>
+        <h1>Noël, c'est pour bientôt</h1>
+        <div class="top_article">
+          <div class="first_article">
+            <a href="article.html">
+              <img
+                src="./images/reveillon.jpg"
+                alt="Une famille autour d'un repas de Noël"
+              />
+              <h2>
+                La période de Noël arrive, le compte à rebours du calendrier de
+                l'avent a commencé et la course aux cadeaux est lancée depuis
+                quelques semaines déjà !
+              </h2>
+            </a>
+          </div>
+          
+          <div class="second_article">
+            <a href="#">
+              <img src="./images/star_wars.jpg" alt="Image du film star wars" />
+              <h2>
+                Star Wars : Hollywood joue la numérisation et les angoisses
+                humaines
+              </h2>
+              <p>L’exploration spatiale est passée du divertissement à celui de méditation empreinte de gravité sur la question de notre survie, analysent Mathieu Macheret et Jacques Mandelbaum.</p>
+            </a>
+          </div>
+        </div>
 
-        <ul>
-          <li>
-            <article>
-              <img src="" alt="">
-              <h3>Biathlon : les Français en mission commando au Grand-Bornand</h3>
-            </article>
-          </li>
-        </ul>
+        <div class="down_article">
+          <div class="article margin">
+            <a href="#">
+              <img src="./images/ski.jpg" alt="Equipe française de biathlon à la coupe du monde"/>
+              <h2>
+                Biathlon : les Français en mission commando au Grand-Bornand
+              </h2>
+            </a>
+          </div>
+          <div class="article margin">
+            <a href="#">
+              <img src="./images/ladjly.jpg" alt="Ladj Ly" />
+              <h2>
+                Le réalisateur des « Misérables » porte plainte après la
+                publication d’articles sur son passé judiciaire
+              </h2>
+            </a>
+          </div>
+          <div class="article">
+            <a href="#">
+              <img src="./images/manif.jpg" alt="Manifestations" />
+              <h2>
+                Manifestations en Inde : les réseaux mobiles suspendus dans des
+                parties de New Delhi
+              </h2>
+            </a>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
@@ -104,11 +154,21 @@
       </div>
       <ul class="network">
         <li>Suivez le monde</li>
-        <li><a href=""><i class="fab fa-facebook"></i>Facebook</a></li>
-        <li><a href=""><i class="fab fa-youtube"></i>Youtube</a></li>
-        <li><a href=""><i class="fab fa-twitter"></i>Twitter</a></li>
-        <li><a href=""><i class="fab fa-instagram"></i>Instagram</a></li>
-        <li><a href=""><i class="fab fa-snapchat"></i>Snapchat</a></li>
+        <li>
+          <a href=""><i class="fab fa-facebook"></i>Facebook</a>
+        </li>
+        <li>
+          <a href=""><i class="fab fa-youtube"></i>Youtube</a>
+        </li>
+        <li>
+          <a href=""><i class="fab fa-twitter"></i>Twitter</a>
+        </li>
+        <li>
+          <a href=""><i class="fab fa-instagram"></i>Instagram</a>
+        </li>
+        <li>
+          <a href=""><i class="fab fa-snapchat"></i>Snapchat</a>
+        </li>
       </ul>
     </footer>
   </body>
