--- a/src/article.html
+++ b/src/article.html
@@ -41,7 +41,7 @@
       </div>
       <nav>
         <ul>
-          <li><i class="fas fa-home"><a href="/"></a></i></li>
+          <li><i class="fas fa-home"><a href="./index.html"></a></i></li>
           <li>Actualité</li>
           <li>Economie</li>
           <li>Vidéos</li>
