--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <nav>
         <ul>
           <li>
-            <i class="fas fa-home"><a href="/"></a></i>
+            <i class="fas fa-home"><a href="./index.html"></a></i>
           </li>
           <li>Actualité</li>
           <li>Economie</li>
