--- a/src/article.html
+++ b/src/article.html
@@ -41,7 +41,9 @@
       </div>
       <nav>
         <ul>
-          <li><i class="fas fa-home"><a href="./index.html"></a></i></li>
+          <li>
+            <a href="./index.html"><i class="fas fa-home"></i></a>
+          </li>
           <li>Actualité</li>
           <li>Economie</li>
           <li>Vidéos</li>
