--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <nav>
         <ul>
           <li>
-            <i class="fas fa-home"><a href="./index.html"></a></i>
+            <a href="./index.html"><i class="fas fa-home"></i></a>
           </li>
           <li>Actualité</li>
           <li>Economie</li>
@@ -74,7 +74,7 @@
               </h2>
             </a>
           </div>
-          
+
           <div class="second_article">
             <a href="#">
               <img src="./images/star_wars.jpg" alt="Image du film star wars" />
@@ -82,7 +82,11 @@
                 Star Wars : Hollywood joue la numérisation et les angoisses
                 humaines
               </h2>
-              <p>L’exploration spatiale est passée du divertissement à celui de méditation empreinte de gravité sur la question de notre survie, analysent Mathieu Macheret et Jacques Mandelbaum.</p>
+              <p>
+                L’exploration spatiale est passée du divertissement à celui de
+                méditation empreinte de gravité sur la question de notre survie,
+                analysent Mathieu Macheret et Jacques Mandelbaum.
+              </p>
             </a>
           </div>
         </div>
@@ -90,7 +94,10 @@
         <div class="down_article">
           <div class="article margin">
             <a href="#">
-              <img src="./images/ski.jpg" alt="Equipe française de biathlon à la coupe du monde"/>
+              <img
+                src="./images/ski.jpg"
+                alt="Equipe française de biathlon à la coupe du monde"
+              />
               <h2>
                 Biathlon : les Français en mission commando au Grand-Bornand
               </h2>
