--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <meta name="Geography" content="France" />
     <meta name="Category" content="Information" />
 
+    <link rel="shortcut icon" type="image/png" href="./images/lemonde.png"/>
     <link href="./scss/styles.scss" rel="stylesheet" />
     <script
       src="https://kit.fontawesome.com/24a053b724.js"
